<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="0dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_code"/>

    <EditText
        android:id="@+id/course_code"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/course_title_hint_code"/>

        </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_name"/>

    <EditText
        android:id="@+id/course_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/course_title_hint_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

    <Button
        android:text="@string/add_button_title"
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColor="@android:color/white"/>

        <Button
            android:text="@string/cancel_button_title"
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColor="@android:color/white"/>
        </LinearLayout>


</LinearLayout>